# CIARA_python

./: .gitignore  LICENSE  README.md  Tutorial_human_gastrula.ipynb  functions_entropy_mixing.py  pyproject.toml  setup.cfg
ciara_python/: __init__.py  ciara.py  get_background_full.py
entropyofmixing/: __init__.py  entropy_mixing.py  get_background_full.py
src/EntropyOfMixing/: functions_entropy_mixing.py
