[metadata]
name = entropyofmixing
version = 0.9.4
author = Marco Stock
author_email = marco.stock@tum.de
description = "Entropy of Mixing algorithm for rare cell type identification in python."
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ScialdoneLab/entropymixing_python
license_files = LICENSE
license = MIT

[options]
packages = find:
python_requires = >=3.7
install_requires =
  numpy
  scipy
