[metadata]
name = ciara_python
version = 1.0.2
author = Marco Stock
author_email = marco.stock@tum.de
description = "Cluster Independent Algorithm for the identification of RAre cell types."
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ScialdoneLab/CIARA_python
license_files = LICENSE
license = MIT

[options]
packages = find:
python_requires = >=3.8
install_requires =
  scanpy
